--- a/package.json
+++ b/package.json
@@ -59,6 +59,7 @@
     "morgan": "^1.5.2",
     "newrelic": "^1.25.4",
     "object-sizeof": "^1.0.8",
+    "parse-duration": "^0.1.1",
     "pm2": "^1.1.3",
     "pmx": "^0.6.0",
     "proxyquire": "^1.7.4",
