--- a/package.json
+++ b/package.json
@@ -56,6 +56,7 @@
     "jsonschema": "^1.1.0",
     "lodash": "^4.2.1",
     "mkdirp": "^0.5.1",
+    "moment": "^2.14.1",
     "morgan": "^1.5.2",
     "newrelic": "^1.25.4",
     "object-sizeof": "^1.0.8",
