--- a/package.json
+++ b/package.json
@@ -77,7 +77,8 @@
     "socket.io": "^1.3.7",
     "socket.io-stream": "^0.9.0",
     "uuid": "~2.0.1",
-    "winston": "^2.0.1"
+    "winston": "^2.0.1",
+    "yn": "^1.2.0"
   },
   "devDependencies": {
     "chai": "^3.4.0",
