--- a/package.json
+++ b/package.json
@@ -44,7 +44,7 @@
     "body-parser": "^1.12.0",
     "bunyan": "^1.5.1",
     "composr-cli": "^0.5.2",
-    "composr-core": "~2.2.0",
+    "composr-core": "git://github.com/rafinskipg/composr-core.git#memorytest",
     "config": "^1.21.0",
     "connect-timeout": "^1.6.1",
     "corbel-js": "~0.6.0",
