--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "config": "^1.21.0",
     "connect-timeout": "^1.6.1",
     "corbel-js": "~0.6.6",
+    "corbel-token-verifier": "0.0.2",
     "cors": "^2.5.3",
     "debug": "~2.2.0",
     "es6-promise": "~3.0.2",
